--- a/art.css
+++ b/art.css
@@ -1,25 +1,56 @@
-body, html {
-  height: 100%;
-  margin: 0px;
+
+
+/* --------- RESET ------------ */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
+/* --------------- End Reset -------*/
 
 
-h1 	{ 
-	text-align: center;
-	font-size: 48px;
-	font-family: 'Fjalla One', sans-serif;
-	color:#253A99;
-	}
 p	{
-	font-size:18px;
-	}
-a	{
-	font-size:18px;
-	font-family: 'Jura', sans-serif;
-	}
-img {
 	text-align: center;
+	font-size:18px;
 	}
 
 	
@@ -211,13 +242,11 @@ img {
 .photo-grid {
 	width:100%;
 	text-align: center;
-	
 }
  
 .photo-grid div{
 	border: 5px solid white;
 	display: inline-block;
-	margin: 1em;
 }
  
 .photo-grid li {
