--- a/art.css
+++ b/art.css
@@ -53,6 +53,13 @@ p	{
 	font-size:18px;
 	}
 
+h2 {
+	text-align: center;
+	font-size: 36px;
+	font-family: 'Fjalla One', sans-serif;
+	color:#253A99;
+	padding:20px;
+	}
 	
 .pageTitle 	{ 
 	text-align: center;
