--- a/shawn.css
+++ b/shawn.css
@@ -51,6 +51,7 @@ img {
 		line-height: 52px;
 		color:white;
 		background-color: #253A99;
+		/*background-image: url('Images/pen.png');*/
 		width: 10%;
 		min-width: 70px;
 		height: 50px;
