--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
         <h1> <a href="/Blog.html">Sketchy Bits</a></h1>
         <h2>A Blog of Code, Art, and General Doodlings</h2>
         <!--<a href="/index.html" class="button"><small>Return to the</small>Homepage</a>-->
+		<img class="title" src="/images/laptop.png" height="112" width="200"></img>
       </div>
     </header>
 
