--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <h1> <a href="/Blog.html">Sketchy Bits</a></h1>
         <h2>A Blog of Code, Art, and General Doodlings</h2>
         <!--<a href="/index.html" class="button"><small>Return to the</small>Homepage</a>-->
-		<img class="title" src="/Images/laptop.png" height="112" width="200"></img>
+		<img class="title" src="/Images/plane.png" height="112" width="354"></img>
       </div>
     </header>
 
@@ -56,6 +56,7 @@
 				text[number++] = "Shawn is a Senior at TN Tech University, enjoys dinosaurs more than the average 5 year old, and spends entirely too much time deciding what to do with his time."
 				text[number++] = "Shawn is a Senior at TN Tech University, writes often in the 3rd person, and could probably drink the milk of an entire herd of cows during a late-night programming session."
 				text[number++] = "Shawn is a Senior at TN Tech University, doodles on class notes entirely too often, and recently found a simple way to randomize static site text through Javascript."
+				text[number++] = "Shawn is a Senior at TN Tech University, suddenly finds himself the owner an adorable dog, and highly appreciates puns."
 				//Expandable :D
 				increment = Math.floor(Math.random() * number);
 				
