--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,38 @@
 ---
 layout: default
 ---
+
+<div id="post-nav" class="clearfix" style="margin-bottom:20px; text-align:center">
+  {% if page.previous.url %} 
+    <a class="prev" href="{{page.previous.url}}">&laquo; Previous Post</a> 
+  {% endif %} 
+  <p style="display:inline">&nbsp &nbsp &nbsp &nbsp &nbsp</p>
+  {% if page.next.url %} 
+    <a class="next" href="{{page.next.url}}">Next Post &raquo;</a> 
+  {% endif %} 
+</div>
+
 <h2>{{ page.title }}</h2>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
+
 {{ content }}
+
+
+<div id="post-nav" class="clearfix" style="margin-top:100px; text-align:center">
+  {% if page.previous.url %} 
+    <a class="prev" href="{{page.previous.url}}">&laquo; Previous Post</a> 
+  {% endif %} 
+  <p style="display:inline">&nbsp &nbsp &nbsp &nbsp &nbsp</p>
+  {% if page.next.url %} 
+    <a class="next" href="{{page.next.url}}">Next Post &raquo;</a> 
+  {% endif %} 
+</div>
+
 
 {%if page.comments %}
 
-    <div id="disqus_thread" style="margin-top:100px"></div>
+    <div id="disqus_thread" style="margin-top:40px"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'rssteffey'; // required: replace example with your forum shortname
