--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -5,9 +5,9 @@
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
+del, dfn, img, ins, kbd, q, s, samp,
+small, strike, sub, sup, tt, var,
+center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
@@ -204,12 +204,11 @@ ul, ol, dl {
 /* COMMON STYLES */
 
 hr {
-  height: 1px;
-  line-height: 1px;
+  height: 0;
   margin-top: 1em;
   padding-bottom: 1em;
-  border: none;
-  background: transparent url('../Images/hr.png') 0 0 no-repeat;
+  border: 0;
+  border-top: solid 1px #ddd;
 }
 
 table {
