--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         <h1> <a href="/Blog.html">Sketchy Bits</a></h1>
         <h2>A Blog of Code, Art, and General Doodlings</h2>
         <!--<a href="/index.html" class="button"><small>Return to the</small>Homepage</a>-->
-		<img class="title" src="/Images/plane.png" height="112" width="354"></img>
+		<img class="title" src="/Images/cake.png" height="112" width="354" alt="Happy Birthday Sketchy Bits!"></img>
       </div>
     </header>
 
@@ -56,19 +56,19 @@
 		  
 		  <!--<a href="/index.html" class="button"><small>Return to the</small>Homepage</a>-->
 		  
-		  <p class="repo-owner" id="bioRand">Shawn is a Senior at TN Tech University and thinks you should get a browser capable of Javascript because this bio would be much better if you did.</p>
+		  <p class="repo-owner" id="bioRand">Shawn is a Software Developer in Franklin, TN, and thinks you should get a browser capable of Javascript because this bio would be much better if you did.</p>
 		  <!-- Randomize Bio text -->
 		  <script type="text/javascript">
 				function text() {
 				};
 				text = new text();
 				number = 0;
-				text[number++] = "Shawn is a Senior at TN Tech University, does an excellent job of pretending to know about sports, and can talk for hours (assuming the topic is 'Pointless EPCOT Trivia')"
-				text[number++] = "Shawn is a Senior at TN Tech University, occasionally knows what he's talking about on certain subjects, and loves hot green tea."
-				text[number++] = "Shawn is a Senior at TN Tech University, enjoys dinosaurs more than the average 5 year old, and spends entirely too much time deciding what to do with his time."
-				text[number++] = "Shawn is a Senior at TN Tech University, writes often in the 3rd person, and could probably drink the milk of an entire herd of cows during a late-night programming session."
-				text[number++] = "Shawn is a Senior at TN Tech University, doodles on class notes entirely too often, and recently found a simple way to randomize static site text through Javascript."
-				text[number++] = "Shawn is a Senior at TN Tech University, suddenly finds himself the owner of an adorable dog, and highly appreciates puns."
+				text[number++] = "Shawn is a Software Developer in Franklin, TN, does an excellent job of pretending to know about sports, and can talk for hours (assuming the topic is 'Pointless EPCOT Trivia')"
+				text[number++] = "Shawn is a Software Developer in Franklin, TN, occasionally knows what he's talking about on certain subjects, and loves hot green tea."
+				text[number++] = "Shawn is a Software Developer in Franklin, TN, enjoys dinosaurs more than the average 5 year old, and spends entirely too much time deciding what to do with his time."
+				text[number++] = "Shawn is a Software Developer in Franklin, TN, writes often in the 3rd person, and could probably drink the milk of an entire herd of cows during a late-night programming session."
+				text[number++] = "Shawn is a Software Developer in Franklin, TN, doodles on notes entirely too often, and recently found a simple way to randomize static site text through Javascript."
+				text[number++] = "Shawn is a Software Developer in Franklin, TN, suddenly finds himself the owner of an adorable dog, and highly appreciates puns."
 				//Expandable :D
 				increment = Math.floor(Math.random() * number);
 				
@@ -76,7 +76,7 @@
 				bio.innerHTML=(text[increment]);
 		  </script>
 		  
-		  <p>I can be contacted at<br>rssteffey42@students.tntech.edu<br>(865) 719-2881</p>
+		  <p>I can be contacted at<br>rssteffey@gmail.com<br>(865) 719-2881</p>
 		  
 		  <p>Visit my homepage for art and code and stuff<a href="/index.html"> here</a>! </p>
 		  
