--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,30 @@
 
     <link href='http://rssteffey.github.io/feed.xml' rel='alternate' type='application/atom+xml'>
     <title> {{ page.title }} </title>
+
+    <!-- Twitter and Slack link previews -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@SteffeyStudios">
+    <meta name="twitter:creator" content="@SteffeyStudios">
+
+    {% if page.title %}
+      <meta name="twitter:title" content="{{ page.title }}">
+    {% else %}
+      <meta name="twitter:title" content="{{ site.title }}">
+    {% endif %}
+    {% if page.url %}
+      <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
+    {% endif %}
+    {% if page.description %}
+      <meta name="twitter:description" content="{{ page.description }}">
+    {% else %}
+      <meta name="twitter:description" content="{{ site.description }}">
+    {% endif %}
+    {% if page.image %}
+      <meta name="twitter:image:src" content="{{ site.url }}/Images/previews/{{ page.image }}">
+    {% else %}
+      <meta name="twitter:image:src" content="{{ site.url }}/Images/previews/rawr.png">
+    {% endif %}
 	
 	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
