--- a/_layouts/post_layout.html
+++ b/_layouts/post_layout.html
@@ -9,8 +9,8 @@
 <div id="outer">
   <div class="container_12">
     <div id="header" class="head">
-      <h1><a href="/Blog.html">Intelligent Design</a></h1>
-      <div id="subtitle" class="subtitle">Bob Loblaw's Law Blog, with Shawn Steffey</div>
+      <h1><a href="/Blog.html">Sketchy Bits</a></h1>
+      <div id="subtitle" class="subtitle">A blog of code and doodlings</div>
 	</div>
 	<div id="main" class="contents">
       <hr />
