--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,9 +31,9 @@
       <meta name="twitter:description" content="{{ site.description }}">
     {% endif %}
     {% if page.image %}
-      <meta name="twitter:image:src" content="{{ site.url }}/Images/previews/{{ page.image }}">
+      <meta name="twitter:image" content="{{ site.url }}/Images/previews/{{ page.image }}">
     {% else %}
-      <meta name="twitter:image:src" content="{{ site.url }}/Images/previews/rawr.png">
+      <meta name="twitter:image" content="{{ site.url }}/Images/previews/rawr.png">
     {% endif %}
 	
 	<script>
