--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@
         <h1> <a href="/Blog.html">Sketchy Bits</a></h1>
         <h2>A Blog of Code, Art, and General Doodlings</h2>
         <!--<a href="/index.html" class="button"><small>Return to the</small>Homepage</a>-->
-		<img class="title" src="/Images/cake.png" height="112" width="354" alt="Happy Birthday Sketchy Bits!"></img>
+		<img class="title" src="/Images/plane.png" height="112" width="354" alt="Wheeeeee"></img>
       </div>
     </header>
 
