Changing randomized descriptions
updating tiny things and fixing mobile responsive view for tiny screens
(old iPhones)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -118,7 +118,7 @@
 				text[number++] = "Shawn is a Software Developer in Franklin, TN, enjoys dinosaurs more than the average 5 year old, and spends entirely too much time deciding what to do with his time."
 				text[number++] = "Shawn is a Software Developer in Franklin, TN, writes often in the 3rd person, and could probably drink the milk of an entire herd of cows during a late-night programming session."
 				text[number++] = "Shawn is a Software Developer in Franklin, TN, doodles on notes entirely too often, and recently found a simple way to randomize static site text through Javascript."
-				text[number++] = "Shawn is a Software Developer in Franklin, TN, suddenly finds himself the owner of an adorable dog, and highly appreciates puns."
+				text[number++] = "Shawn is a Software Developer in Franklin, TN, eats entirely too many tortillas, and highly appreciates puns."
 				//Expandable :D
 				increment = Math.floor(Math.random() * number);
 				
