--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
     <meta name="twitter:site" content="@SteffeyStudios">
     <meta name="twitter:creator" content="@SteffeyStudios">
     <meta property="og:type"  content="article" />
+    <meta property="fb:app_id"  content="article" />
 
     {% if page.title %}
       <meta name="twitter:title" content="{{ page.title }}">
@@ -58,23 +59,15 @@
 
   <body>
     <!--Facebook script -->
-      <script>
-        window.fbAsyncInit = function() {
-          FB.init({
-            appId      : '313494338774286',
-            xfbml      : true,
-            version    : 'v2.4'
-          });
-        };
-
-        (function(d, s, id){
-           var js, fjs = d.getElementsByTagName(s)[0];
-           if (d.getElementById(id)) {return;}
-           js = d.createElement(s); js.id = id;
-           js.src = "//connect.facebook.net/en_US/sdk.js";
-           fjs.parentNode.insertBefore(js, fjs);
-         }(document, 'script', 'facebook-jssdk'));
-      </script>
+      <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
+  
     <header>
       <div class="inner" id="titleArea">
         <h1> <a href="/Blog.html">Sketchy Bits</a></h1>
