Enlarging Mcdonald's text
Enlarged

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@SteffeyStudios">
     <meta name="twitter:creator" content="@SteffeyStudios">
-    <meta property="og:type"  content="article" />
+    <meta property="og:type"  content="website" />
 
     {% if page.title %}
       <meta name="twitter:title" content="{{ page.title }}">
@@ -132,7 +132,7 @@
       <!-- Share Button -->
          <div class="fb-share-button" 
              data-href="{{ site.url }}{{ page.url }}" 
-             data-layout="button_count">
+             data-layout="button">
          </div>
       <br/>
       <!--Like Button
