--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
 
     <header>
       <div class="inner" id="titleArea">
-        <h1> <a href="/Blog.html">Sketchy Bits</a></h1>
+        <h1> <a href="/blog">Sketchy Bits</a></h1>
         <h2>A Blog of Code, Art, and General Doodlings</h2>
         <!--<a href="/index.html" class="button"><small>Return to the</small>Homepage</a>-->
 		<img class="title" src="/Images/plane.png" height="112" width="354" alt="Wheeeeee"></img>
