--- a/art.css
+++ b/art.css
@@ -324,10 +324,16 @@ margin-left:50%;
 	
 }
 
+.footer a
+{
+	color: #FFF;
+	text-decoration: none;
+}
+
 .return
 {
-	width: 200px;
-	height: 30px;
+	width: 250px;
+	height: 40px;
 	background-color: #253A99;
 	margin:0;
 	padding:0;
@@ -339,7 +345,7 @@ margin-left:50%;
 	font-family: 'Jura', sans-serif;
 	text-align:center;
 	color:white;
-	line-height:30px;
+	line-height:42px;
 	box-shadow: 0px 0px 0px 4pt white;
 	
 }
