--- a/shawn.css
+++ b/shawn.css
@@ -160,6 +160,12 @@ img {
 	
 }
 
+.footer a
+{
+	color: #FFF;
+	text-decoration: none;
+}
+
 .return
 {
 	position: fixed;
@@ -205,4 +211,32 @@ img {
 	text-decoration: none;
 	font-family: 'Fjalla One', sans-serif;
 }
+
+.designBox{
+	color: #224;
+	font-family: sans-serif;
+	
+}
+
+.designBox a{
+	color: #224;
+	font-family: sans-serif;
+}
+
+.centerBox{
+	margin: auto;
+    width: 30%;
+}
+
+.opacity_changer{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	background-color: #DDD;
+	opacity: 0.5;
+	z-index: -1;
+}
+
 
