REMOVE THE PHONE NUMBER
GOOD FRICKEN GOSH STOP CALLING ME

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -118,7 +118,7 @@
 				bio.innerHTML=(text[increment]);
 		  </script>
 		  
-		  <p>I can be contacted at<br>rssteffey@gmail.com<br>(865) 719-2881</p>
+		  <p>I can be contacted at<br>rssteffey@gmail.com<br></p>
 		  
 		  <p>Visit my homepage for art and code and stuff<a href="/index.html"> here</a>! </p>
 		  
