--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,6 +54,23 @@
   ga('send', 'pageview');
 
 </script>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script>
+  jQuery.noConflict();
+  jQuery(function() {
+	jQuery(".refbody").hide();
+	jQuery(".refnum").click(function(event) {
+	  jQuery(this.nextSibling).toggle();
+	  event.stopPropagation();
+	});
+	jQuery("body").click(function(event) {
+	  jQuery(".refbody").hide();
+	});
+  });
+</script>
+
+
   </head>
 
   <body>
