Add minor bio tweaks - Add small footnote style - Add two draft posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,12 +122,12 @@
 				};
 				text = new text();
 				number = 0;
-				text[number++] = "Shawn is a Software Developer in Franklin, TN, does an excellent job of pretending to know about sports, and can talk for hours (assuming the topic is 'Pointless EPCOT Trivia')"
-				text[number++] = "Shawn is a Software Developer in Franklin, TN, occasionally knows what he's talking about on certain subjects, and loves hot green tea."
-				text[number++] = "Shawn is a Software Developer in Franklin, TN, enjoys dinosaurs more than the average 5 year old, and spends entirely too much time deciding what to do with his time."
-				text[number++] = "Shawn is a Software Developer in Franklin, TN, writes often in the 3rd person, and could probably drink the milk of an entire herd of cows during a late-night programming session."
-				text[number++] = "Shawn is a Software Developer in Franklin, TN, doodles on notes entirely too often, and recently found a simple way to randomize static site text through Javascript."
-				text[number++] = "Shawn is a Software Developer in Franklin, TN, eats entirely too many tortillas, and highly appreciates puns."
+				text[number++] = "Shawn is a Software Developer in Nashville, TN, does an excellent job of pretending to know about sports, and can talk for hours (assuming the topic is 'Pointless EPCOT Trivia')"
+				text[number++] = "Shawn is a Software Developer in Nashville, TN, occasionally knows what he's talking about on certain subjects, and loves hot green tea."
+				text[number++] = "Shawn is a Software Developer in Nashville, TN, enjoys dinosaurs more than the average 5 year old, and spends entirely too much time deciding what to do with his time."
+				text[number++] = "Shawn is a Software Developer in Nashville, TN, writes often in the 3rd person, and could probably drink the water of the entire TN River during a late-night programming session."
+				text[number++] = "Shawn is a Software Developer in Nashville, TN, doodles on notes entirely too often, and recently found a simple way to randomize static site text through Javascript."
+				text[number++] = "Shawn is a Software Developer in Nashville, TN, eats entirely too many tortillas, and highly appreciates puns."
 				//Expandable :D
 				increment = Math.floor(Math.random() * number);
 				
