--- a/instagram/css/index.css
+++ b/instagram/css/index.css
@@ -12,7 +12,7 @@ body {
     background: #FCB045;
     background: linear-gradient(180deg,rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 99%);
     height: 20%;
-    padding: 5em;
+    padding: 5em 5em 0em 5em;
     text-align: center;
 }
 
@@ -28,6 +28,34 @@ body {
     font-size: 1.5em;
     font-weight: 200;
     color: #fff;
+}
+
+.date-jumper {
+    display: flex; 
+    gap: 1rem; 
+    row-gap: 0rem;
+    justify-content: center; 
+    margin: auto;
+    font-family: 'Qwigley', cursive;
+    font-size: 1.6em;
+    color: white;
+    font-style: normal;
+    font-weight: 200;
+    border-top: #ffffff75 3px solid;
+    border-bottom: #ffffff75 3px solid;
+    margin-bottom: 50px;
+    margin-top: 0;
+    padding: 0 1em 0 1em;
+}
+
+.date-jumper a {
+    color: white;
+    text-decoration: none;
+}
+
+.date-jumper a:hover {
+    color:#520372;
+    text-decoration: underline;
 }
 
 .grid-container {
@@ -412,4 +440,20 @@ body {
         max-width: 700px;
         margin: 0 1em 0 1em;
     }
+
+    .header h1 {
+        font-size: 4.5rem;
+        margin-top: 0;
+        color: #fff;
+    }
+
+    .header h3 {
+        font-size: 1rem;
+        color: #fff;
+    }
+
+    .date-jumper {
+        flex-wrap: wrap;
+    }
+
 }
