--- a/instagram/css/index.css
+++ b/instagram/css/index.css
@@ -20,7 +20,8 @@ body {
     font-family: 'Qwigley', cursive;
     font-size: 8em;
     color: #fff;
-    margin-bottom: 0
+    margin-bottom: 0;
+    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
 .header h3 {
@@ -28,6 +29,7 @@ body {
     font-size: 1.5em;
     font-weight: 200;
     color: #fff;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
 }
 
 .date-jumper {
@@ -36,21 +38,23 @@ body {
     row-gap: 0rem;
     justify-content: center; 
     margin: auto;
-    font-family: 'Qwigley', cursive;
-    font-size: 1.6em;
-    color: white;
-    font-style: normal;
-    font-weight: 200;
-    border-top: #ffffff75 3px solid;
-    border-bottom: #ffffff75 3px solid;
+    border-top: #ffffff80 1px solid;
+    border-bottom: #ffffff75 1px solid;
     margin-bottom: 50px;
     margin-top: 0;
-    padding: 0 1em 0 1em;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    width: auto
 }
 
 .date-jumper a {
+    font-family: 'Qwigley', cursive;
+    font-size: 2rem;
     color: white;
+    font-style: normal;
+    font-weight: 200;
     text-decoration: none;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
 }
 
 .date-jumper a:hover {
@@ -439,7 +443,7 @@ body {
     border-color: #fff;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 750px) {
     .grid-container {
         max-width: 700px;
         margin: 0 1em 0 1em;
@@ -458,6 +462,10 @@ body {
 
     .date-jumper {
         flex-wrap: wrap;
+    }
+
+    .date-jumper a {
+        font-size: 1.6rem;;
     }
 
 }
