--- a/instagram/css/index.css
+++ b/instagram/css/index.css
@@ -12,24 +12,45 @@ body {
     background: #FCB045;
     background: linear-gradient(180deg,rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 99%);
     height: 20%;
-    padding: 5em 5em 0em 5em;
+    padding-top: 5em;
     text-align: center;
+    width: 100%;
 }
 
 .homepage-link{
     position: fixed;
     top: 25px;
     left: 20px;
-    color: white;
-    font-family: 'Roboto', sans-serif;
     font-size: 3rem;
-}
-
-.homepage-link a {
     color: white;
     text-decoration: underline;
     font-style: italic;
     font-family: 'Roboto', sans-serif;
+}
+
+.homepage-link:hover {
+    color: rgba(131, 58, 180, 1);
+}
+
+.back-to-top {
+    position: fixed;
+    bottom: 25px;
+    right: 40px;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 5rem;
+    transition: opacity 0.3s ease;
+    z-index: 1000;
+    cursor: pointer;
+    opacity: 0;
+}
+
+.back-to-top.visible {
+    opacity: 1;
+}
+
+.back-to-top:hover {
+    color: rgba(131, 58, 180, 1);
 }
 
 .header h1 {
@@ -456,37 +477,6 @@ body {
     font-size: 16px;
 }
 
-.back-to-top {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: rgba(255, 255, 255, 0.692);
-    color: black;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: #000 2px solid;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    z-index: 1000;
-    cursor: pointer;
-}
-
-.back-to-top.visible {
-    opacity: 1;
-}
-
-.back-to-top:hover {
-    background: rgba(131, 58, 180, 1);
-    color: white;
-    border-color: #fff;
-}
-
 @media only screen and (max-width: 750px) {
     .grid-container {
         max-width: 700px;
@@ -494,7 +484,7 @@ body {
     }
 
     .header h1 {
-        font-size: 4.5rem;
+        font-size: 5.5rem;
         margin-top: 0;
         color: #fff;
     }
@@ -524,6 +514,10 @@ body {
 }
 
 @media only screen and (max-width: 450px) {
+    .header {
+        padding-top: 2rem;;
+    }
+
     .header h1 {
         font-size: 4rem;
         overflow: hidden;
@@ -531,14 +525,14 @@ body {
 
     .date-jumper {
         flex-wrap: wrap;
-        margin-left: 3rem;
-        margin-right: 3rem; 
+        /* margin-left: 3rem;
+        margin-right: 3rem;  */
     }
 
     .event-jumper {
         flex-wrap: wrap;
-        margin-left: 3rem;
-        margin-right: 3rem; 
+        /* margin-left: 3rem;
+        margin-right: 3rem;  */
     }
 
     .event-jumper a {
@@ -551,15 +545,16 @@ body {
         left: 10px;
         font-size: 1.5rem;
     }
+
+    .back-to-top {
+        bottom: 25px;
+        right: 40px;
+        font-size: 3rem;
+    }
 }
 
 @media only screen and (max-width: 375px) {
-    .header {
-        padding-top: 1rem;;
-    }
-
     .header h1 {
-        font-size: 2.5rem;
         margin-bottom: 1rem;
     }
 
