--- a/instagram/css/index.css
+++ b/instagram/css/index.css
@@ -554,6 +554,37 @@ body {
         right: 40px;
         font-size: 3rem;
     }
+
+    .modal-caption {
+        font-size: 9pt;
+    }
+    .modal-comments {
+        font-size: 9pt;
+    }
+
+    .modal-box {
+        padding: 5px;
+        margin-top: 60px;
+    }
+
+    .modal-prev {
+        left: 0px !important;
+    }
+
+    .modal-next {
+        right: 0px !important;
+    }
+
+    .modal-close {
+        background: rgba(0, 0, 0, 0.5);
+        border-radius: 50%;
+        /* border: 3px solid rgb(255, 255, 255); */
+        width: 30px;
+        height: 30px;
+        text-align: center;
+        top: 65px;
+        right: 10px;
+    }
 }
 
 @media only screen and (max-width: 375px) {
